--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,22 @@
         <version>1.1.1</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/org.hamcrest/hamcrest-junit -->
+    <dependency>
+        <groupId>org.hamcrest</groupId>
+        <artifactId>hamcrest-junit</artifactId>
+        <version>2.0.0.0</version>
+        <scope>test</scope>
+    </dependency>
+
+
+    <dependency>
+        <groupId>io.rest-assured</groupId>
+        <artifactId>json-schema-validator</artifactId>
+        <version>4.3.0</version>
+    </dependency>
+
+
     <dependency>
         <groupId>org.apache.poi</groupId>
         <artifactId>poi</artifactId>
