--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
                 <version>2.20.1</version>
                 <configuration>
                     <suiteXmlFiles>
-                        <suiteXmlFile>C:\Users\Testing2\IdeaProjects\Apired\src\test\java\com\api\testing.xml</suiteXmlFile>
+                        <suiteXmlFile>C:\Users\Testing2\IdeaProjects\Apired\src\test\java\com\api\Api_Davivienda.xml</suiteXmlFile>
                     </suiteXmlFiles>
                 </configuration>
             </plugin>
